// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionCard renders correctly with abi with args and a no value 1`] = `
<View
  style={
    Object {
      "borderColor": "transparent",
      "borderWidth": 1,
      "height": 1334,
      "paddingBottom": 15,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 16,
        "bottom": 0,
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginBottom": 8,
          "padding": 22,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(74,74,74,1)",
              "fontFamily": "NunitoSans-Regular",
              "fontSize": 20,
              "lineHeight": 27,
              "textAlign": "center",
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      >
        Approve Transaction
      </Text>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "right": 16,
            "top": 16,
            "width": 44,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="close"
          size={28}
        />
      </View>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 24,
            "lineHeight": 33,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "padding": 10,
          "paddingBottom": 20,
          "paddingRight": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "paddingBottom": 0,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(138,155,161,1.0)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 13,
                "letterSpacing": 0.5,
                "lineHeight": 15,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
          >
            You have never 
            interacted
             with 
            this dApp
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="plus"
          size={24}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(246,247,248,1)",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingBottom": 25,
          "paddingTop": 25,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
         Transaction Cost
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
         
         ETH
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontSize": 16,
          }
        }
      >
         $
         USD
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              Object {
                "marginBottom": 30,
                "marginLeft": 30,
                "marginRight": 30,
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
             Approve Transaction 
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionCard renders correctly with abi without args and value 1`] = `
<View
  style={
    Object {
      "borderColor": "transparent",
      "borderWidth": 1,
      "height": 1334,
      "paddingBottom": 15,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 16,
        "bottom": 0,
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginBottom": 8,
          "padding": 22,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(74,74,74,1)",
              "fontFamily": "NunitoSans-Regular",
              "fontSize": 20,
              "lineHeight": 27,
              "textAlign": "center",
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      >
        Approve Transaction
      </Text>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "right": 16,
            "top": 16,
            "width": 44,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="close"
          size={28}
        />
      </View>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 24,
            "lineHeight": 33,
            "textAlign": "center",
          }
        }
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "paddingBottom": 10,
          "textAlign": "center",
        }
      }
    >
      You have insufficient funds for this action.
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(246,247,248,1)",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingBottom": 25,
          "paddingTop": 25,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
         Transaction Cost
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
         
         ETH
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontSize": 16,
          }
        }
      >
         $
         USD
      </Text>
    </View>
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "stretch",
              "alignSelf": "stretch",
              "borderColor": "#CCCCCC",
              "borderRadius": 8,
              "borderWidth": 1,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-evenly",
              "marginBottom": 10,
              "marginLeft": 30,
              "marginRight": 30,
              "padding": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
            },
            undefined,
            Object {
              "backgroundColor": undefined,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
              "paddingLeft": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": undefined,
                  "fontFamily": "NunitoSans-Bold",
                  "fontSize": 18,
                  "letterSpacing": 1,
                  "lineHeight": 24,
                  "paddingRight": 5,
                }
              }
            >
              Error:
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": undefined,
                  "fontFamily": "NunitoSans-Bold",
                  "fontSize": 12,
                  "letterSpacing": 1,
                  "lineHeight": 15,
                }
              }
            >
              Insufficient Funds.
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexBasis": 40,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Icon
            name="ios-alert"
            style={
              Object {
                "backgroundColor": "transparent",
                "fontSize": 30,
                "marginTop": 2,
                "padding": 10,
              }
            }
          />
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "borderColor": "rgba(74,74,74,1)",
                "borderWidth": 1,
                "padding": 15,
              },
              Object {
                "alignItems": "center",
                "flex": 0,
                "justifyContent": "center",
                "minHeight": 50,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "rgba(74,74,74,1)",
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(74,74,74,1)",
              }
            }
          >
            Reject
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionCard renders correctly with both client and destination 1`] = `
<View
  style={
    Object {
      "borderColor": "transparent",
      "borderWidth": 1,
      "height": 1334,
      "paddingBottom": 15,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 16,
        "bottom": 0,
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginBottom": 8,
          "padding": 22,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(74,74,74,1)",
              "fontFamily": "NunitoSans-Regular",
              "fontSize": 20,
              "lineHeight": 27,
              "textAlign": "center",
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      >
        Approve Transaction
      </Text>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "right": 16,
            "top": 16,
            "width": 44,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="close"
          size={28}
        />
      </View>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 24,
            "lineHeight": 33,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "padding": 10,
          "paddingBottom": 20,
          "paddingRight": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "paddingBottom": 0,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(138,155,161,1.0)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 13,
                "letterSpacing": 0.5,
                "lineHeight": 15,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
          >
            You have never 
            interacted
             with 
            this dApp
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="plus"
          size={24}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(246,247,248,1)",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingBottom": 25,
          "paddingTop": 25,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
         Transaction Cost
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
         
         ETH
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontSize": 16,
          }
        }
      >
         $
         USD
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              Object {
                "marginBottom": 30,
                "marginLeft": 30,
                "marginRight": 30,
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
             Approve Transaction 
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionCard renders correctly with destination being invalid destination 1`] = `
<View
  style={
    Object {
      "borderColor": "transparent",
      "borderWidth": 1,
      "height": 1334,
      "paddingBottom": 15,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 16,
        "bottom": 0,
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginBottom": 8,
          "padding": 22,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(74,74,74,1)",
              "fontFamily": "NunitoSans-Regular",
              "fontSize": 20,
              "lineHeight": 27,
              "textAlign": "center",
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      >
        Approve Transaction
      </Text>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "right": 16,
            "top": 16,
            "width": 44,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="close"
          size={28}
        />
      </View>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 24,
            "lineHeight": 33,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(246,247,248,1)",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingBottom": 25,
          "paddingTop": 25,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
         Transaction Cost
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
         
         ETH
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontSize": 16,
          }
        }
      >
         $
         USD
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "stretch",
            "alignSelf": "stretch",
            "borderColor": "#CCCCCC",
            "borderRadius": 8,
            "borderWidth": 1,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-evenly",
            "marginBottom": 10,
            "marginLeft": 30,
            "marginRight": 30,
            "padding": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
          },
          Object {
            "flex": 0,
            "marginBottom": 30,
          },
          Object {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
            "paddingLeft": 10,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "letterSpacing": 1,
                "lineHeight": 24,
                "paddingRight": 5,
              }
            }
          >
            Error:
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": undefined,
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 12,
                "letterSpacing": 1,
                "lineHeight": 15,
              }
            }
          >
            Unverifiable ropsten address
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexBasis": 40,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Icon
          name="ios-alert"
          style={
            Object {
              "backgroundColor": "transparent",
              "fontSize": 30,
              "marginTop": 2,
              "padding": 10,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionCard renders correctly with destination being validated 1`] = `
<View
  style={
    Object {
      "borderColor": "transparent",
      "borderWidth": 1,
      "height": 1334,
      "paddingBottom": 15,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 16,
        "bottom": 0,
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginBottom": 8,
          "padding": 22,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(74,74,74,1)",
              "fontFamily": "NunitoSans-Regular",
              "fontSize": 20,
              "lineHeight": 27,
              "textAlign": "center",
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      >
        Approve Transaction
      </Text>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "right": 16,
            "top": 16,
            "width": 44,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="close"
          size={28}
        />
      </View>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 24,
            "lineHeight": 33,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "padding": 10,
          "paddingBottom": 20,
          "paddingRight": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "paddingBottom": 0,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(138,155,161,1.0)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 13,
                "letterSpacing": 0.5,
                "lineHeight": 15,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
          >
            You have never 
            interacted
             with 
            this dApp
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="plus"
          size={24}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(246,247,248,1)",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingBottom": 25,
          "paddingTop": 25,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
         Transaction Cost
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
         
         ETH
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontSize": 16,
          }
        }
      >
         $
         USD
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              Object {
                "marginBottom": 30,
                "marginLeft": 30,
                "marginRight": 30,
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
             Approve Transaction 
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionCard renders correctly with only request 1`] = `
<View
  style={
    Object {
      "borderColor": "transparent",
      "borderWidth": 1,
      "height": 1334,
      "paddingBottom": 15,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 16,
        "bottom": 0,
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginBottom": 8,
          "padding": 22,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(74,74,74,1)",
              "fontFamily": "NunitoSans-Regular",
              "fontSize": 20,
              "lineHeight": 27,
              "textAlign": "center",
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      >
        Approve Transaction
      </Text>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "right": 16,
            "top": 16,
            "width": 44,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="close"
          size={28}
        />
      </View>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 24,
            "lineHeight": 33,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "padding": 10,
          "paddingBottom": 20,
          "paddingRight": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "paddingBottom": 0,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(138,155,161,1.0)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 13,
                "letterSpacing": 0.5,
                "lineHeight": 15,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
          >
            You have never 
            interacted
             with 
            this dApp
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="plus"
          size={24}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(246,247,248,1)",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingBottom": 25,
          "paddingTop": 25,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
         Transaction Cost
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
         
         ETH
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontSize": 16,
          }
        }
      >
         $
         USD
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              Object {
                "marginBottom": 30,
                "marginLeft": 30,
                "marginRight": 30,
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
             Approve Transaction 
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionCard renders correctly with publicUportTransaction 1`] = `
<View
  style={
    Object {
      "borderColor": "transparent",
      "borderWidth": 1,
      "height": 1334,
      "paddingBottom": 15,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 16,
        "bottom": 0,
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginBottom": 8,
          "padding": 22,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(74,74,74,1)",
              "fontFamily": "NunitoSans-Regular",
              "fontSize": 20,
              "lineHeight": 27,
              "textAlign": "center",
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      >
        Approve Transaction
      </Text>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "right": 16,
            "top": 16,
            "width": 44,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="close"
          size={28}
        />
      </View>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 24,
            "lineHeight": 33,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "padding": 10,
          "paddingBottom": 20,
          "paddingRight": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "paddingBottom": 0,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(138,155,161,1.0)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 13,
                "letterSpacing": 0.5,
                "lineHeight": 15,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
          >
            You have never 
            interacted
             with 
            this dApp
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="plus"
          size={24}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(246,247,248,1)",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingBottom": 25,
          "paddingTop": 25,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
         Transaction Cost
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
         
         ETH
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontSize": 16,
          }
        }
      >
         $
         USD
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              Object {
                "marginBottom": 30,
                "marginLeft": 30,
                "marginRight": 30,
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
             Approve Transaction 
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionCard renders correctly with request and a 0 value 1`] = `
<View
  style={
    Object {
      "borderColor": "transparent",
      "borderWidth": 1,
      "height": 1334,
      "paddingBottom": 15,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 16,
        "bottom": 0,
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginBottom": 8,
          "padding": 22,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(74,74,74,1)",
              "fontFamily": "NunitoSans-Regular",
              "fontSize": 20,
              "lineHeight": 27,
              "textAlign": "center",
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      >
        Approve Transaction
      </Text>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "right": 16,
            "top": 16,
            "width": 44,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="close"
          size={28}
        />
      </View>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 24,
            "lineHeight": 33,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "padding": 10,
          "paddingBottom": 20,
          "paddingRight": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "paddingBottom": 0,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(138,155,161,1.0)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 13,
                "letterSpacing": 0.5,
                "lineHeight": 15,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
          >
            You have never 
            interacted
             with 
            this dApp
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="plus"
          size={24}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(246,247,248,1)",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingBottom": 25,
          "paddingTop": 25,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
         Transaction Cost
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
         
         ETH
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontSize": 16,
          }
        }
      >
         $
         USD
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              Object {
                "marginBottom": 30,
                "marginLeft": 30,
                "marginRight": 30,
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
             Approve Transaction 
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionCard renders correctly with request and a value 1`] = `
<View
  style={
    Object {
      "borderColor": "transparent",
      "borderWidth": 1,
      "height": 1334,
      "paddingBottom": 15,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 16,
        "bottom": 0,
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginBottom": 8,
          "padding": 22,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(74,74,74,1)",
              "fontFamily": "NunitoSans-Regular",
              "fontSize": 20,
              "lineHeight": 27,
              "textAlign": "center",
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      >
        Approve Transaction
      </Text>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "right": 16,
            "top": 16,
            "width": 44,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="close"
          size={28}
        />
      </View>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 24,
            "lineHeight": 33,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "padding": 10,
          "paddingBottom": 20,
          "paddingRight": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "paddingBottom": 0,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(138,155,161,1.0)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 13,
                "letterSpacing": 0.5,
                "lineHeight": 15,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
          >
            You have never 
            interacted
             with 
            this dApp
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="plus"
          size={24}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(246,247,248,1)",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingBottom": 25,
          "paddingTop": 25,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
         Transaction Cost
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
         
         ETH
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontSize": 16,
          }
        }
      >
         $
         USD
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              Object {
                "marginBottom": 30,
                "marginLeft": 30,
                "marginRight": 30,
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
             Approve Transaction 
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionCard renders correctly with request and a value with insufficient balance 1`] = `
<View
  style={
    Object {
      "borderColor": "transparent",
      "borderWidth": 1,
      "height": 1334,
      "paddingBottom": 15,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 16,
        "bottom": 0,
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginBottom": 8,
          "padding": 22,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(74,74,74,1)",
              "fontFamily": "NunitoSans-Regular",
              "fontSize": 20,
              "lineHeight": 27,
              "textAlign": "center",
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      >
        Approve Transaction
      </Text>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "right": 16,
            "top": 16,
            "width": 44,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="close"
          size={28}
        />
      </View>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 24,
            "lineHeight": 33,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "padding": 10,
          "paddingBottom": 20,
          "paddingRight": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "paddingBottom": 0,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(138,155,161,1.0)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 13,
                "letterSpacing": 0.5,
                "lineHeight": 15,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
          >
            You have never 
            interacted
             with 
            this dApp
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Icon
          color="rgba(155,155,155,1)"
          name="plus"
          size={24}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(246,247,248,1)",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingBottom": 25,
          "paddingTop": 25,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
         Transaction Cost
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "NunitoSans-Bold",
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
         
         ETH
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontSize": 16,
          }
        }
      >
         $
         USD
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              Object {
                "marginBottom": 30,
                "marginLeft": 30,
                "marginRight": 30,
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
             Approve Transaction 
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;
